--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@react-native-community/checkbox": "^0.5.9",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/picker": "^1.8.1",
-    "@react-native-firebase/app": "^14.0.0",
+    "@react-native-firebase/app": "^14.0.1",
     "@react-native-firebase/auth": "^14.0.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/drawer": "^6.1.8",
@@ -29,7 +29,10 @@
     "react-native-reanimated": "2.2.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
-    "react-native-tab-view": "^3.1.1"
+    "react-native-tab-view": "^3.1.1",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
